--- a/package.json
+++ b/package.json
@@ -31,13 +31,15 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.5",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
     "browser-sync": "^2.24.5",
     "eslint": "^4.17.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
     "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.1",
+    "gulp-concat": "^2.6.1",
     "gulp-csso": "^3.0.0",
     "gulp-imagemin": "^3.4.0",
     "gulp-less": "3.3.x",
@@ -45,6 +47,7 @@
     "gulp-postcss": "7.0.x",
     "gulp-posthtml": "^3.0.4",
     "gulp-rename": "^1.3.0",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-svgstore": "^6.1.1",
     "postcss-sorting": "^3.1.0",
     "posthtml-include": "^1.2.0",
